--- a/MascotaFeliz.App.Presentacion/Pages/Propietario/List.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Propietario/List.cshtml
@@ -50,6 +50,12 @@
                     Detalles Propietario
                 </a>
             </td>
+            <td>
+                <a class="btn btn-primary table-btn" asp-page="./EditPropietario" asp-route-propietariomascotasId="@Propietario.Id">
+                    <i class="fas  fa-address-book fa-lg" aria-hidden="true"></i>
+                    Editar Propietario
+                </a>
+            </td> 
         </tr>
     }
 
