--- a/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -63,11 +63,11 @@
                                         Domiciliaria</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-page="/Mascota/ListMascota"
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/CMascota/ListMascota"
                                         target="_blanck">Mascota</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-page="/Veterinario/ListVeterinario"
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/CVeterinario/ListVeterinario"
                                         target="_blanck">Veterinario</a>
                                 </li>
                             </ul>
