--- a/MascotaFeliz.App.Presentacion/Pages/Visita/List1.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Visita/List1.cshtml
@@ -84,6 +84,12 @@
                     Detalles Visita Domiciliaria
                 </a>
             </td>
+            <td>
+                <a class="btn btn-primary table-btn" asp-page="./EditVisita" asp-route-visitadomiciliariaId="@Visita.Id">
+                    <i class="fas  fa-address-book fa-lg" aria-hidden="true"></i>
+                    Editar Visita
+                </a>
+            </td>
 
         </tr>
     }
