--- a/MascotaFeliz.App.Presentacion/Pages/CVeterinario/ListVeterinario.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/CVeterinario/ListVeterinario.cshtml
@@ -11,6 +11,7 @@
         <col style="background-color: rgba(14, 221, 248, 0.397);">
         <col style="background-color: rgba(120, 250, 178, 0.452);">
         <col style="background-color: rgba(14, 221, 248, 0.397);">
+        <col style="background-color: rgba(120, 250, 178, 0.452);">
 
 
     </colgroup>
@@ -18,6 +19,7 @@
     <caption><b>Listado Veterinarios</b></caption>
     <thead>
         <tr>
+            <td>Id</td>
             <td>Documento de Identidad</td>
             <td>Nombre</td>
             <td>Apellidos</td>
@@ -31,6 +33,9 @@
         <tr>
             <td>
                 @Veterinario.Id
+            </td>
+            <td>
+                @Veterinario.Documento
             </td>
             <td>
                 @Veterinario.Nombre
@@ -60,3 +65,4 @@
     }
 
 </table>
+<a asp-page =".\EditVeterinario" class="bnt btn-primary">Adicionar Veterinario</a>
