--- a/MascotaFeliz.App.Presentacion/Pages/Propietario/Details.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Propietario/Details.cshtml
@@ -7,6 +7,9 @@
     Id: @Model.PropietarioMascotas.Id
 </div>
 <div>
+    Documento: @Model.PropietarioMascotas.Documento
+</div>
+<div>
     Nombre: @Model.PropietarioMascotas.Nombre
 </div>
 <div>
