--- a/MascotaFeliz.App.Presentacion/Pages/Propietario/List.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Propietario/List.cshtml
@@ -11,6 +11,7 @@
         <col style="background-color: rgba(14, 221, 248, 0.397);">
         <col style="background-color: rgba(120, 250, 178, 0.452);">
         <col style="background-color: rgba(14, 221, 248, 0.397);">
+        <col style="background-color: rgba(120, 250, 178, 0.452);">
 
 
     </colgroup>
@@ -18,6 +19,7 @@
     <caption><b>Listado Propietarios de Mascotas</b></caption>
     <thead>
         <tr>
+            <td>Id</td>
             <td>Documento de Identidad</td>
             <td>Nombre</td>
             <td>Apellidos</td>
@@ -31,6 +33,9 @@
         <tr>
             <td>
                 @Propietario.Id
+            </td>
+            <td>
+                @Propietario.Documento
             </td>
             <td>
                 @Propietario.Nombre
@@ -60,3 +65,5 @@
     }
 
 </table>
+
+<a asp-page =".\EditPropietario" class="bnt btn-primary">Adicionar Propietario</a>
