--- a/MascotaFeliz.App.Presentacion/Pages/CVeterinario/DeleteVeterinario.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/CVeterinario/DeleteVeterinario.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model MascotaFeliz.App.Presentacion.Pages.EditVeterinarioModel
+@model MascotaFeliz.App.Presentacion.Pages.DeleteVeterinarioModel
 @{
 }
 <h2>Editar Veterinario:@Model.Veterinario.Nombre</h2> 
@@ -30,6 +30,6 @@
         <input asp-for="Veterinario.TarjetaProfesional" class="for-control">
         <span class="text-danger" asp-validation-for="Veterinario.TarjetaProfesional"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Grabar</button>
+    <button type="submit" class="btn btn-primary">Eliminar</button>
 </form>
 <a asp-page="./ListVeterinario" class="btn-default">Lista de Veterinarios</a>
