--- a/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -35,32 +35,14 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-page="/FormularioVisita/Formulario1"
-                                        target="_blanck">Formulario Visita</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-page="/FormularioPropietario/Formulario2" target="_blanck">Formulario
-                                        Propietario</a>
-                                </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-page="/FormularioMascota/Formulario3" target="_blanck">Formulario Mascota</a>
-                                </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-page="/FormularioVeterinario/Formulario4" target="_blanck">Formulario
-                                        Veterinario</a>
-                                </li>
+                                
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/List"
-                                        target="_blanck">Propietarios de Mascotas</a>
+                                        target="_blanck">Propietario</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-page="/Visita/List1"
-                                        target="_blanck">Visita
-                                        Domiciliaria</a>
+                                        target="_blanck">Visita</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-page="/CMascota/ListMascota"
