--- a/MascotaFeliz.App.Presentacion/Pages/CMascota/EditMascota.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/CMascota/EditMascota.cshtml
@@ -2,24 +2,89 @@
 @model MascotaFeliz.App.Presentacion.Pages.EditMascotaModel
 @{
 }
-<h2>Editar Mascota:@Model.Mascota.NombreMascota</h2> 
-<form method="post">
-    <input type="hidden" asp-for="Mascota.Id" />
-    <div class="form-group">
-        <label asp-for="Mascota.NombreMascota"></label>
-        <input asp-for="Mascota.NombreMascota" class="for-control">
-        <span class="text-danger" asp-validation-for="Mascota.NombreMascota"></span>
+<div class="framework">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Registro Mascota</title>
+
+        <link rel="stylesheet" href="estilos.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="~/css/estilos.css" />
+    </head>
+
+    <div>
+        <div class="fondo">
+            <div class="Encabezado">
+                <img class="imagen1" src="~/imagen/pet4.png">
+                <h1 class="logo"> Mundo <span>Paticas</span> </h1>
+            </div>
+
+            <div class="contenido">
+                <form action="" method="POST" id="form">
+                    <input type="hidden" asp-for="Mascota.Id" />
+                    <h1>Mascota</h1>
+                    <div class="form2">
+
+                        <div class="grupo">
+                            <input id="name" asp-for="Mascota.NombreMascota" required>
+                            <label for="" >Nombre</label>
+                            <span class="barra" asp-validation-for="Mascota.NombreMascota"></span>
+                        </div>
+                        <div class="grupo">
+                            
+                            
+                            <input id="name" asp-for="Mascota.PropietarioMascota" >
+                            <label for="">Propietario</label>
+                            <span class="barra" asp-validation-for="Mascota.PropietarioMascota"></span>
+                        </div>
+                        <div class="grupo">
+                            <select asp-for="Mascota.TipoMascota" name="menu" required>
+                                <option value = "Canino"  >Canino</option>
+                                <option value = "Felino"  >Felino</option>
+                                <option value = "Otras"  >Otras</option>
+                            </select>
+                            <span class="barra" asp-validation-for="Mascota.TipoMascota"></span>
+                        </div>
+
+                        <div class="bloque2">
+                            <textarea asp-for="Mascota.Caracteristicas" rows="4" required></textarea>
+                            <span class="barra" asp-validation-for="Mascota.Caracteristicas"></span>
+                        </div>
+
+                        <div class="bloque3">
+                            <button type="submit">Registrarme</button></div>
+                    </div>
+                    <a asp-page="./ListMascota" class="btn-default">Lista de Mascotas</a>
+                </form>
+
+                <div class="info">
+                    <h4><b>Mayor Información</b></h4>
+                    <ul>
+
+                        <li> <i class="material-icons">location_on</i> Avenida Esperanza N° 26-16 </li>
+                        <li> <i class="material-icons">call</i> 601 - 8641223 </li>
+                        <li> <i class="material-icons">mail</i> mundopaticas@gmail.com </li>
+                        <li><i class="material-icons">whatsapp</i> +57 3132256147 </li>
+                        <li><i class="material-icons">facebook</i> <a href="https://www.facebook.com">Mundo Paticas</a>
+                        </li>
+
+
+                    </ul>
+                    <p>
+                        Somos una empresa especializada <br> en el cuidado de tu mascota.<br>
+                        Ofrecemos una amplia gama de <br> servicios de alta calidad y<br>
+                        experiencia confortable para ti y tu peludito.<br>
+                    </p>
+                    <p class="Yotta">Elaborado por</p>
+                    <img class="imagen2" src="~/imagen/yota1.png">
+
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label asp-for="Mascota.Caracteristicas"></label>
-        <input asp-for="Mascota.Caracteristicas" class="for-control">
-        <span class="text-danger" asp-validation-for="Mascota.Caracteristicas"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Mascota.TipoMascota"></label>
-        <input asp-for="Mascota.TipoMascota" class="for-control">
-        <span class="text-danger" asp-validation-for="Mascota.TipoMascota"></span>
-    </div>
-    <button type="submit" class="btn btn-primary">Grabar</button>
-</form>
-<a asp-page="./ListMascota" class="btn-default">Lista de Mascotas</a>
+</div>
+
+</html>
