--- a/MascotaFeliz.App.Presentacion/Pages/CMascota/ListMascota.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/CMascota/ListMascota.cshtml
@@ -9,7 +9,7 @@
         <col style="background-color: rgba(14, 221, 248, 0.397);">
         <col style="background-color: rgba(120, 250, 178, 0.452);">
         <col style="background-color: rgba(14, 221, 248, 0.397);">
-        @* <col style="background-color: rgba(120, 250, 178, 0.452);"> *@
+        <col style="background-color: rgba(120, 250, 178, 0.452);">
         
 
 
@@ -19,7 +19,7 @@
     <thead>
         <tr>
             
-            @* <td>Nombre</td> *@
+            <td>Nombre</td>
             <td>Caracteristica</td>
             <td>Propietario</td>
             <td>tipo de mascota</td>
@@ -35,9 +35,9 @@
             <td>
                 @Mascota.Caracteristicas
             </td>
-            @* <td>
-                @Mascota.PropietarioMascota.Nombre
-                </td> *@
+            <td>
+                @Mascota.PropietarioMascota
+            </td>
             <td>
                 @Mascota.TipoMascota
             </td>
