--- a/MascotaFeliz.App.Presentacion/Pages/Propietario/EditPropietario.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Propietario/EditPropietario.cshtml
@@ -2,34 +2,89 @@
 @model MascotaFeliz.App.Presentacion.Pages.EditPropietarioModel
 @{
 }
-<h2>Editar Propietario:@Model.PropietarioMascotas.Nombre</h2> 
-<form method="post">
-    <input type="hidden" asp-for="PropietarioMascotas.Id" />
-    <div class="form-group">
-        <label asp-for="PropietarioMascotas.Documento"></label>
-        <input asp-for="PropietarioMascotas.Documento" class="for-control">
-        <span class="text-danger" asp-validation-for="PropietarioMascotas.Documento"></span>
+
+<div class="framework">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Registro Propietario</title>
+
+        <link rel="stylesheet" href="estilos.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="~/css/estilos.css" />
+    </head>
+    <div>
+        <div class="fondo">
+            <div class="Encabezado">
+                <img class="imagen1" src="~/imagen/pet4.png">
+                <h1 class="logo"> Mundo <span>Paticas</span> </h1>
+            </div>
+            <div class="contenido">
+                <form action="" method="POST" id="form">
+                    <input type="hidden" asp-for="PropietarioMascotas.Id" />
+                    <h1>Responsable del Peludito</h1>
+                    <div class="form">
+
+                        <div class="grupo">
+                            <input inputmode="numeric"  id="documento" asp-for="PropietarioMascotas.Documento" required>
+                            <span class="barra" asp-validation-for="PropietarioMascotas.Documento"></span>
+                            <label for="">Documento</label>
+                        </div>
+                        <div class="grupo">
+                            <input  id="name" asp-for="PropietarioMascotas.Nombre" required>
+                            <span class="barra" asp-validation-for="PropietarioMascotas.Documento"></span>
+                            <label for="">Nombres</label>
+                        </div>
+                        <div class="grupo">
+                            <input id="apellidos" asp-for="PropietarioMascotas.Apellidos"  required>
+                            <span class="barra" asp-validation-for="PropietarioMascotas.Apellidos"></span>
+                            <label for="">Apellidos</label>
+                        </div>
+                        
+                        <div class="grupo">
+                            <input  id="telefono" asp-for="PropietarioMascotas.Telefono" required>
+                            <span class="barra" asp-validation-for="PropietarioMascotas.Telefono"></span>
+                            <label for="">Teléfono</label>
+                        </div>
+                        <div class="grupo">
+                            <input  id="direccion" asp-for="PropietarioMascotas.Direccion" required>
+                            <span class="barra" asp-validation-for="PropietarioMascotas.Direccion"></span>
+                            <label for="">Dirección</label>
+                        </div>
+
+                        <div class="bloque">
+                            <button type="submit">Registrarme</button>
+                            <a asp-page="./List" class="button2">Lista de Visitas</a>
+                            </div>
+                            
+                    </div>
+                </form>
+                <div class="info">
+                    <h4><b>Mayor Información</b></h4>
+                    <ul>
+
+                        <li> <i class="material-icons">location_on</i> Avenida Esperanza N° 26-16 </li>
+                        <li> <i class="material-icons">call</i> 601 - 8641223 </li>
+                        <li> <i class="material-icons">mail</i> mundopaticas@gmail.com </li>
+                        <li><i class="material-icons">whatsapp</i> +57 3132256147 </li>
+                        <li><i class="material-icons">facebook</i> <a href="https://www.facebook.com">Mundo Paticas</a>
+                        </li>
+
+
+                    </ul>
+                    <p>
+                        Somos una empresa especializada <br> en el cuidado de tu mascota.<br>
+                        Ofrecemos una amplia gama de <br> servicios de alta calidad y<br>
+                        experiencia confortable para ti y tu peludito.<br>
+                    </p>
+                    <p class="Yotta">Elaborado por</p>
+                    <img class="imagen2" src="~/imagen/yota1.png">
+
+                </div>
+            </div>
+        </div>
+
     </div>
-    <div class="form-group">
-        <label asp-for="PropietarioMascotas.Nombre"></label>
-        <input asp-for="PropietarioMascotas.Nombre" class="for-control">
-        <span class="text-danger" asp-validation-for="PropietarioMascotas.Nombre"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="PropietarioMascotas.Apellidos"></label>
-        <input asp-for="PropietarioMascotas.Apellidos" class="for-control">
-        <span class="text-danger" asp-validation-for="PropietarioMascotas.Apellidos"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="PropietarioMascotas.Telefono"></label>
-        <input asp-for="PropietarioMascotas.Telefono" class="for-control">
-        <span class="text-danger" asp-validation-for="PropietarioMascotas.Telefono"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="PropietarioMascotas.Direccion"></label>
-        <input asp-for="PropietarioMascotas.Direccion" class="for-control">
-        <span class="text-danger" asp-validation-for="PropietarioMascotas.Direccion"></span>
-    </div>
-    <button type="submit" class="btn btn-primary">Grabar</button>
-</form>
-<a asp-page="./List" class="btn-default">Lista de Visitas</a>
+</div>
