--- a/MascotaFeliz.App.Presentacion/Pages/Visita/List1.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Visita/List1.cshtml
@@ -13,9 +13,9 @@
         <col style="background-color: rgba(14, 221, 248, 0.397);">
         <col style="background-color: rgba(120, 250, 178, 0.452);">
         <col style="background-color: rgba(14, 221, 248, 0.397);">
-        @* <col style="background-color: rgba(120, 250, 178, 0.452);">
+        <col style="background-color: rgba(120, 250, 178, 0.452);">
         <col style="background-color: rgba(14, 221, 248, 0.397);">
-        <col style="background-color: rgba(120, 250, 178, 0.452);"> *@
+        
         
 
     </colgroup>
@@ -25,10 +25,9 @@
     <thead>
         <tr>
             
-            @* <td>Veterinario</td>
-            <td>Mascota</td> *@
+            <td>Veterinario</td>
+            <td>Mascota</td>
             <td>Fecha de la Visita Domiciliaria</td>
-            @* <td>Tarjeta Profesional</td> *@
             <td>Temperatura (°C)</td>
             <td>Masa Corporal (Kg)</td>
             <td>Frecuencia Respiratoria (rpm)</td>
@@ -40,18 +39,15 @@
     @foreach (var Visita in Model.VisitaDomiciliaria)
     {
         <tr>
-            @* <td>
-                @Visita.Veterinario.Nombre
-            </td> *@
-            @* <td>
-                @Visita.Mascota.NombreMascota
-            </td> *@
+            <td>
+                @Visita.Veterinario
+            </td>
+            <td>
+                @Visita.Mascota
+            </td>
             <td>
                 @Visita.FechaHora
             </td>
-            @* <td>
-                @Visita.IdProfesional.TarjetaProfesional
-            </td> *@
             <td>
                 @Visita.Temperatura
             </td>
